<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/android_lar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clipToOutline="true"
    tools:context=".HomeActivity">


    <RelativeLayout
        android:id="@+id/page_android_small___1_ek1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp">

        <View
            android:id="@+id/_bg__android_small___1_ek2"
            android:layout_width="360dp"
            android:layout_height="640dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/_bg__android_small___1_ek2_shape" />

        <ImageView
            android:id="@+id/purple_illustrated_home__dashboard__upgrade_premium__and_join_classroom_screens_minimalist_mobile_prototype__360___724_px__1__1"
            android:layout_width="360dp"
            android:layout_height="706dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:contentDescription="purple_illustrated_home__dashboard__upgrade_premium__and_join_classroom_screens_minimalist_mobile_prototype__360___724_px__1__1"
            android:scaleType="centerCrop"
            android:src="@drawable/purple_illustrated_home__dashboard__upgrade_premium__and_join_classroom_screens_minimalist_mobile_prototype__360___724_px__1__1" />

        <View
            android:id="@+id/rectangle_2"
            android:layout_width="140dp"
            android:layout_height="160dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="270dp"
            android:background="@drawable/rectangle_2_shape" />

        <View
            android:id="@+id/rectangle_6"
            android:layout_width="140dp"
            android:layout_height="160dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="440dp"
            android:background="@drawable/rectangle_6_shape" />

        <View
            android:id="@+id/rectangle_4"
            android:layout_width="140dp"
            android:layout_height="160dp"
            android:layout_marginStart="198dp"
            android:layout_marginTop="270dp"
            android:background="@drawable/rectangle_4_shape" />

        <View
            android:id="@+id/rectangle_5"
            android:layout_width="140dp"
            android:layout_height="160dp"
            android:layout_marginStart="198dp"
            android:layout_marginTop="440dp"
            android:background="@drawable/rectangle_5_shape" />

        <TextView
            android:id="@+id/modunu_y_kselt"
            android:layout_width="142.5dp"
            android:layout_height="25.5dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="370dp"
            android:fontFamily="Inter"
            android:text="@string/modunu_y_kselt_string"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/modunu_y_kselt_ek1"
            android:layout_width="142.5dp"
            android:layout_height="25.5dp"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="520dp"
            android:fontFamily="Inter"
            android:text="@string/modunu_y_kselt_ek1_string"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/modunda_kal_"
            android:layout_width="120.5dp"
            android:layout_height="25.5dp"
            android:layout_marginLeft="207dp"
            android:layout_marginTop="520dp"
            android:fontFamily="Inter"
            android:text="@string/modunda_kal__string"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/modunda_kal__ek1"
            android:layout_width="116.5dp"
            android:layout_height="25.5dp"
            android:layout_marginLeft="211dp"
            android:layout_marginTop="370dp"
            android:fontFamily="Inter"
            android:text="@string/modunda_kal__ek1_string"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/foto_raf_n___ek_yapay_zeka_moduna_g_re__nersin_"
            android:layout_width="134.5dp"
            android:layout_height="40dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="385dp"
            android:fontFamily="Inter"
            android:text="@string/foto_raf_n___ek_yapay_zeka_moduna_g_re__nersin__string"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/emojilerden_modunu_se__yapay_zeka_moduna_g_re__nersin"
            android:layout_width="136.5dp"
            android:layout_height="50dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="535dp"
            android:fontFamily="Inter"
            android:text="@string/emojilerden_modunu_se__yapay_zeka_moduna_g_re__nersin_string"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/emojilerden_modunu_se__yapay_zeka_moduna_g_re__nersin_ek1"
            android:layout_width="132.5dp"
            android:layout_height="50dp"
            android:layout_marginLeft="209dp"
            android:layout_marginTop="535dp"
            android:fontFamily="Inter"
            android:text="@string/emojilerden_modunu_se__yapay_zeka_moduna_g_re__nersin_ek1_string"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/foto_raf_n___ek_yapay_zeka_moduna_g_re__nersin__ek1"
            android:layout_width="132.5dp"
            android:layout_height="40dp"
            android:layout_marginLeft="209dp"
            android:layout_marginTop="385dp"
            android:fontFamily="Inter"
            android:text="@string/foto_raf_n___ek_yapay_zeka_moduna_g_re__nersin__ek1_string"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/moodupgradewemoji"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginStart="212dp"
            android:layout_marginTop="440dp"
            android:contentDescription="moodupgradewemoji"
            android:src="@drawable/untitled_design_16__2" />

        <ImageView
            android:id="@+id/staymoodwemoji"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="435dp"
            android:contentDescription="untitled_design_19__1"
            android:src="@drawable/untitled_design_19__1" />

        <ImageView
            android:id="@+id/staymoodwphoto"
            android:layout_width="125dp"
            android:layout_height="96dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="275dp"
            android:contentDescription="untitled_design_20__1"
            android:src="@drawable/untitled_design_20__1" />

        <ImageView
            android:id="@+id/moodupgradewphoto"
            android:layout_width="130dp"
            android:layout_height="96dp"
            android:layout_marginStart="202dp"
            android:layout_marginTop="275dp"
            android:contentDescription="untitled_design_21__1"
            android:src="@drawable/untitled_design_21__1" />

        <ImageView
            android:id="@+id/untitled_design_22__1"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="70dp"
            android:contentDescription="untitled_design_22__1"
            android:src="@drawable/untitled_design_22__1" />

    </RelativeLayout>

</RelativeLayout>