<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@color/white"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/content_container"
    android:layout_width="480dp"
    android:layout_height="760dp"
    tools:ignore="MissingConstraints"
    tools:layout_editor_absoluteY="-120dp">



        <RelativeLayout android:id="@+id/page_frame_1_ek1"
            android:layout_marginTop="0dp"
            android:layout_marginStart="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <View   android:id="@+id/_bg__frame_1_ek2"
                android:background="@drawable/_bg__frame_1_ek2_shape"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_width="448dp"
                android:layout_height="720dp" />

            <View   android:id="@+id/rectangle_7"
                android:background="@drawable/rectangle_7_shape"
                android:layout_marginStart="17dp"
                android:layout_marginTop="21dp"
                android:layout_width="334dp"
                android:layout_height="57dp" />

            <View   android:id="@+id/rectangle_8"
                android:background="@drawable/rectangle_8_shape"
                android:layout_marginStart="17dp"
                android:layout_marginTop="21dp"
                android:layout_width="334dp"
                android:layout_height="57dp" />

            <ImageView android:id="@+id/imageView"
                android:src="@drawable/purple_illustrated_home__dashboard__upgrade_premium__and_join_classroom_screens_minimalist_mobile_prototype__360___724_px__1"
                android:contentDescription="purple_illustrated_home__dashboard__upgrade_premium__and_join_classroom_screens_minimalist_mobile_prototype__360___724_px__1"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:scaleType="centerCrop"
                android:layout_width="363dp"
                android:layout_height="720dp" />

            <TextView android:id="@+id/textview1"
                android:fontFamily="Montserrat"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal|center"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginLeft="31dp"
                android:layout_marginTop="510dp"
                android:layout_width="313dp"
                android:layout_height="25dp"
                android:text="@string/modunuz_bulunamad__string"
                />


            <RelativeLayout android:id="@+id/primary___small____pressed"
                android:layout_marginTop="432dp"
                android:layout_marginStart="114dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >


                <RelativeLayout android:id="@+id/buttonbase___primary___pressed"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >


                    <RelativeLayout android:id="@+id/base_button"
                        android:layout_marginTop="0dp"
                        android:layout_marginStart="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >
                        <Button
                            android:id="@+id/btnCamera"
                            android:layout_width="137dp"
                            android:layout_height="32dp"
                            android:fontFamily="sans-serif"
                            android:background="@drawable/rounded_corners"
                            />
                        <ImageView android:id="@+id/imageView2"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="0dp"
                            android:layout_width="137dp"
                            android:layout_height="32dp" />

                    </RelativeLayout>

                </RelativeLayout>

                <TextView android:id="@+id/______value"
                    android:fontFamily="Open Sans"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal|center"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/rectangle_7_color"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="6dp"
                    android:layout_width="117dp"
                    android:layout_height="25dp"
                    android:text="@string/______value_string"
                    />

            </RelativeLayout>

            <ImageView android:id="@+id/btnplay"
                android:src="@drawable/untitled_design_25__1"
                android:contentDescription="untitled_design_25__1"
                android:layout_marginStart="136dp"
                android:layout_marginTop="548dp"
                android:layout_width="94dp"
                android:layout_height="76dp" />

            <ImageView android:id="@+id/untitled_design_17__1"
                android:src="@drawable/untitled_design_17__1"
                android:contentDescription="untitled_design_17__1"
                android:layout_marginStart="238dp"
                android:layout_marginTop="516dp"
                android:layout_width="104.27dp"
                android:layout_height="126.14dp" />

            <ImageView android:id="@+id/untitled_design_18__1"
                android:src="@drawable/untitled_design_18__1"
                android:contentDescription="untitled_design_18__1"
                android:layout_marginStart="20dp"
                android:layout_marginTop="377dp"
                android:layout_width="94.24dp"
                android:layout_height="97.28dp" />

            <ImageView android:id="@+id/backButton"
                android:src="@drawable/untitled_design_13__2"
                android:contentDescription="untitled_design_13__2"
                android:layout_marginStart="42dp"
                android:layout_marginTop="33dp"
                android:layout_width="35dp"
                android:layout_height="32dp" />

            <TextView android:id="@+id/btnplayText"
                android:fontFamily="Montserrat"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginLeft="148dp"
                android:layout_marginTop="586dp"
                android:layout_width="323dp"
                android:layout_height="34dp"
                android:text="@string/oynat__string"
                />

        </RelativeLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>